# FeedbackAnalyzer_15

./: CMakeLists.txt  Cursor AI_퀴즈 - 문제.docx  README.md
docs/: analysis.md  bug_fix.md  new_feature.md  postmortem_report.md  refactoring.md
prompt/: 001_phase1_legacy_analysis_wrapup.md  001_phase1_legacy_analysis_wrapup_raw.md  002_phase2_gtest_safety_net_wrapup.md  002_phase2_gtest_safety_net_wrapup_raw.md  003_phase3_red_wrapup.md  003_phase3_red_wrapup_raw.md  004_phase3_green_wrapup.md  004_phase3_green_wrapup_raw.md  005_phase4_refactoring_wrapup.md  005_phase4_refactoring_wrapup_raw.md  006_phase5_6_srp_controller_service_wrapup.md  006_phase5_6_srp_controller_service_wrapup_raw.md  007_phase7_new_feature_wrapup.md  007_phase7_new_feature_wrapup_raw.md  008_phase8_postmortem_wrapup.md  008_phase8_postmortem_wrapup_raw.md
report/: 001_phase1_legacy_analysis_wrapup.md  002_phase2_gtest_safety_net_wrapup.md  003_phase3_red_wrapup.md  004_phase3_green_wrapup.md  005_phase4_refactoring_wrapup.md  006_phase5_6_srp_controller_service_wrapup.md  007_phase7_new_feature_wrapup.md  008_phase8_postmortem_wrapup.md
src/cpp/: Constants.cpp  Constants.h  FeedbackController.cpp  FeedbackController.h  FeedbackService.cpp  FeedbackService.h  FileHandler.cpp  FileHandler.h  FilterResult.h  Filters.cpp  Filters.h  Session.cpp  Session.h  TextAnalyzer.cpp  TextAnalyzer.h  TextUtils.h  main.cpp
tests/: test_analyzer.cpp  test_bugfix_red.cpp  test_phase7_feature.cpp
